<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/invoice_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:text="@string/invoice_image"/>
            <ImageButton

                android:id="@+id/invoice_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoice_image"
                />
        </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoice_title_label" />
            <EditText
                android:id="@+id/invoice_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoice_title_hint"/>
</LinearLayout>

</LinearLayout>



    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invoice_type" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/invoice_type"

        android:layout_marginBottom="20dp"
        ></Spinner>



    <TextView        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invoice_shop_name"/>
    <EditText
        android:id="@+id/invoice_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/invoice_shop_name_hint"/>
    <TextView        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invoice_comment"/>
    <EditText
        android:id="@+id/invoice_cmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/invoice_comment_hint"/>

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/location"
       android:text="@string/invoice_location"/>




    <Button
        android:id="@+id/invoice_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox

        android:id="@+id/invoice_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invoice_solved_label"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>